--- a/expenseManager/src/components/Card/Card.css
+++ b/expenseManager/src/components/Card/Card.css
@@ -1,21 +1,35 @@
-.card{
-    border:2px solid white;
+/* Card container */
+.card {
+    background-color: white;
     border-radius: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.card div{
-    display: inline;
-}
-.title{
-font-size: large;
-margin-top: 8px;
-}
-.card div{
-    border: 2px solid rgba(255, 255, 255, 0.3);
-    border-radius: 5px;
-    width: 80%;
-    padding: 10px;
-    margin : 10px;
-}
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    text-align: center;
+    width: 28%;
+    margin: 10px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    font-family: var(--primary-font);
+  }
+  
+  /* Card hover effect */
+  .card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Title text styling */
+  .title {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    margin-bottom: 10px;
+    text-transform: uppercase;
+  }
+  
+  /* Amount text styling */
+  .amount {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--accent-color);
+  }
+  
