--- a/expenseManager/src/index.css
+++ b/expenseManager/src/index.css
@@ -14,7 +14,7 @@
   body {
     font-family: var(--secondary-font);
     background-color: var(--background-color);
-    color: var(--primary-text-color);
+    /* color: var(--primary-text-color); */
     margin: 0;
     padding: 0;
   }
