--- a/expenseManager/src/components/Dashboard/Dashboard.css
+++ b/expenseManager/src/components/Dashboard/Dashboard.css
@@ -1,10 +1,15 @@
 .dashboard{
-margin-top: 10px;
  display: flex;
- justify-content: space-around;
+ justify-content:space-evenly;
  width: 100%;
  flex-wrap: wrap;
  flex-grow: 1;
+ margin-top: 2%;
+ margin-bottom: 3%;
+}
+.dashboardMain{
+    margin-top: 4%;
+    margin-bottom: 5%;
 }
 h1{
     color: var(--primary-color);
