--- a/expenseManager/src/components/Dashboard/Dashboard.css
+++ b/expenseManager/src/components/Dashboard/Dashboard.css
@@ -17,7 +17,7 @@ h1{
     text-align: center;
     margin-top: 14px;
 }
-.btns{
+.btnss{
     display: flex;
     justify-content: space-around; 
     margin-top: 20px; /* Space between cards and button */
